--- a/src/kalman_filter_core/CMakeLists.txt
+++ b/src/kalman_filter_core/CMakeLists.txt
@@ -22,7 +22,10 @@ find_package(rclcpp REQUIRED)
 find_package(Eigen3 REQUIRED)
 
 add_library(${PROJECT_NAME} src/EKFFilter.cpp)
-ament_target_dependencies(${PROJECT_NAME} Eigen3::Eigen)
+ament_target_dependencies(${PROJECT_NAME} Eigen3)
+
+
+target_link_libraries(${PROJECT_NAME}   PRIVATE Eigen3::Eigen)
 
 target_include_directories(${PROJECT_NAME} PUBLIC
 $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
