declassified coupled classes into interfaces and concrete implementation

--- a/src/observation_model/CMakeLists.txt
+++ b/src/observation_model/CMakeLists.txt
@@ -24,7 +24,7 @@ find_package(Eigen3 REQUIRED)
 # find_package(<dependency> REQUIRED)
 
 add_library(${PROJECT_NAME} SHARED
-  src/baseObservationModel.cpp 
+  src/baseObservationModel.cpp src/ImuOdomObservationModel.cpp
 )
 ament_target_dependencies(${PROJECT_NAME} Eigen3 )
 
