added common utils and helper function

--- a/src/common_utils/package.xml
+++ b/src/common_utils/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>kalman_filter_app</name>
+  <name>common_utils</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="mahajanparth0@gmail.com">parth</maintainer>
@@ -9,17 +9,11 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <!-- <depend>std_msgs</depend>
-  <depend>rclcpp</depend>
-  <depend>kalman_filter_core</depend>
-  <depend>motion_model</depend>
-  <depend>observation_model</depend>
-  <depend>sensor_msgs</depend>
   <depend>geometry_msgs</depend>
-  <depend>nav_msgs</depend>
+  <depend>tf2_geometry_msgs</depend>
+  <depend>tf2_ros</depend>
   <depend>Eigen</depend>
-   -->
-
+  
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
