added launch scripts

--- a/src/kalman_filter_app/CMakeLists.txt
+++ b/src/kalman_filter_app/CMakeLists.txt
@@ -46,6 +46,9 @@ if(BUILD_TESTING)
   #set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
-
+install(TARGETS kalman_filter_app
+  RUNTIME DESTINATION lib/${PROJECT_NAME}
+)
+install(DIRECTORY launch DESTINATION  share/${PROJECT_NAME})
 
 ament_package()
